# Infinity_calculator

./: CMakeLists.txt  README.md  calculate.h  calculator.c  calculator.h  divide.c  evaluation.sh  fileReader.c  inf_calc  main.c  minus.c  multiply.c  otherFunction.c  plus.c  returnValue.c  temp
input/: INPUT1  INPUT2  INPUT3
output/: OUTPUT2  OUTPUT3
